# acquia-ai-governance-gate

./: README.md  pyproject.toml
src/acquia_ai_governance_gate/: __init__.py  cli.py  evaluator.py
tests/: test_cli.py  test_evaluator.py
